--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <h1>これはApache (httpd) 上で、静的コンテンツを配信するデモです。</h1>
   </hgroup>
    
-   WebHookを体験してみましょう。
+   WebHookを体験してみましょう！
    
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
