--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>これはApache (httpd) 上で、静的コンテンツを配信するデモです。</h1>
    
   　まだまだ寒いですよ。寒い寒い寒い寒い！！！
-    そんなことはない！！！
+    そんなことはない！！！ YESYESYESYES
 
   </body>
 </html>
